tests/rosetta/out/Zig/almost-prime.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenalmost-prime968787846/001/prog.zig:41:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/TestMochiZigGoldenalmost-prime968787846/001/prog.zig:41:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
